# GOD

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  QUICKSTART_FREE_VARIANT.md  README.md  UPGRADE_2026_INDEX.md  UPGRADE_2026_SPEC.md  UPGRADE_2026_SUMMARY.md  UPGRADE_TASKS.md  VARIANT_COMPARISON.md  god_agent.toml  pyproject.toml
.github/workflows/: ci.yml
docs/: README.md  architecture.md  cli-reference.md  configuration.md  contributing.md  getting-started.md  installation.md  providers.md  security.md  skills.md  troubleshooting.md  upgrade-landing.html  workflows.md
ide/vscode/: README.md  extension.js  package.json
src/god_agent/: __init__.py  agent.py  cli.py  config.py  depcheck.py  loop.py  proactive.py  safety.py  sandbox.py  team.py  verify.py  web.py  workspace.py
src/god_agent/context/: __init__.py  code_graph.py  engine.py
src/god_agent/llm/: __init__.py  anthropic_provider.py  base.py  gemini_provider.py  mock.py  openai_compat.py  orchestrator.py  registry.py  router.py  scripted.py  transport.py
src/god_agent/memory/: __init__.py  conventions.py  episodic.py  lessons.py  skills.py  system.py
src/god_agent/reasoning/: __init__.py  critic.py  engine.py  generator.py  planner.py
tests/: conftest.py  test_agent.py  test_anthropic_provider.py  test_cli.py  test_code_graph.py  test_critic.py  test_depcheck.py  test_diffview.py  test_filesystem.py  test_gemini_provider.py  test_generate_and_apply.py  test_generator.py  test_git_tool.py  test_loop.py  test_loop_workflows.py  test_memory.py  test_memory_integration.py  test_openai_compat.py  test_openai_compat_live_local.py  test_planner.py  test_proactive.py  test_reasoning_engine.py  test_registry.py  test_repl.py  test_router.py  test_safety.py  test_sandbox.py  test_scripted.py  test_shell.py  test_skills.py  test_team.py  test_verify.py  test_watch.py  test_web.py  test_web_server.py  test_who_knows.py  test_workspace.py
(+7 files in other folders)
